# os

./: .gitignore  CMakeLists.txt  readme.md
b-plus-tree/: CMakeLists.txt  main.cpp
b-plus-tree/src/BTree/: BTree.cpp  BTree.h  CMakeLists.txt  Common.h  InternalNode.h  LeafNode.h  NodeWrappers.h  PageManager.cpp  PageManager.h
b-plus-tree/src/MemoryMap/: CMakeLists.txt  MemoryMappedFile.cpp  MemoryMappedFile.h
b-plus-tree/src/Menu/: CMakeLists.txt  ConcreteCommands.cpp  ConcreteCommands.h  ICommand.h  Menu.cpp  Menu.h
b-plus-tree/tests/: CMakeLists.txt  Tree.test.cpp
exe-packer/: CMakeLists.txt  main.cpp
flip-case/: CMakeLists.txt  main.cpp
flip-case/FileDesc/: CMakeLists.txt  FileDesc.cpp  FileDesc.hpp
linux-utils-first/: solution.sh  stdout.txt
linux-utils-first/proj/: main.cpp
linux-utils-second/: bash.sh  solution.sh
list-process-linux/: main.cpp
list-processes/: CMakeLists.txt  main.cpp
list-processes/ProcessPrinter/: ProcessPrinter.cpp  ProcessPrinter.hpp
list-processes/ProcessScanner/: ProcessScanner.hpp  ProcessScannerLinux.cpp  ProcessScannerWin.cpp
list-processes/ScopedHandle/: ScopedHandle.cpp  ScopedHandle.hpp
list-processes/ScopedResource/: ScopedResource.cpp  ScopedResource.hpp
memory-manager/: CMakeLists.txt  main.cpp
memory-manager/benchmarks/: CMakeLists.txt  ThreadPool.benchmark.cpp
memory-manager/src/MemoryManager/: CMakeLists.txt  Common.h  IOSHandler.h  MemoryManager.cpp  MemoryManager.h  PageTableEntry.h  PhysicalMemory.cpp  PhysicalMemory.h  StepanOS.h  VirtualMemory.cpp  VirtualMemory.h
memory-manager/src/ScopeTimer/: CMakeLists.txt  ScopeTimer.cpp
memory-manager/src/ThreadPool/: CMakeLists.txt
memory-manager/tests/: ThreadPool.test.cpp
mt-img-sim/: CMakeLists.txt  main.cpp
mt-img-sim/src/ArgParser/: ArgParser.cpp  ArgParser.h  CMakeLists.txt
mt-img-sim/src/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h
mt-img-sim/src/ResultFilter/: CMakeLists.txt  ResultFilter.cpp  ResultFilter.h
mt-search/: CMakeLists.txt  main.cpp
mt-search/src/Application/: Application.cpp  Application.h  CMakeLists.txt
mt-search/src/CommandParser/: CMakeLists.txt  CommandParser.cpp  CommandParser.h
mt-search/src/FileSystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  IFileSystem.h
mt-search/src/InvertedIndex/: CMakeLists.txt  InvertedIndex.cpp  InvertedIndex.h
mt-search/src/ScopeTimer/: ScopeTimer.cpp  ScopeTimer.h
mt-search/src/SearchService/: CMakeLists.txt  SearchService.cpp  SearchService.h
mt-search/src/TextParser/: CMakeLists.txt  TextParser.cpp  TextParser.h
mt-search/src/ThreadPool/: ThreadPool.cpp  ThreadPool.h
mt-search/tests/: CMakeLists.txt
sys-info/: CMakeLists.txt  main.cpp
sys-info-linux/: CMakeLists.txt  main.cpp
sys-info-win/: CMakeLists.txt  main.cpp
sys-info-win/FileDesc/: FileDesc.cpp  FileDesc.hpp
sys-info/SysInfo/: CMakeLists.txt  SysInfo.h  SysInfoLinux.cpp  SysInfoWin.cpp
thumbgen/: CMakeLists.txt  main.cpp
thumbgen/src/ArgParser/: ArgParser.cpp  ArgParser.h
thumbgen/src/DirectoryScanner/: CMakeLists.txt  DirectoryScanner.cpp  DirectoryScanner.h
thumbgen/src/ImageProcessor/: Image.cpp  Image.h  ImageProcessor.cpp  ImageProcessor.h  stb_implementatiton.cpp
zombie/: CMakeLists.txt  main.cpp
